--- a/force-app/main/default/lwc/carList/carList.html
+++ b/force-app/main/default/lwc/carList/carList.html
@@ -1,32 +1,16 @@
 <template>
-	<lightning-card title="Cars" icon-name="utility:key">
+	<lightning-card title = "Cars" icon-name = "utility:key">
 		<div class="slds-card__body slds-card__body_inner">
-			<lightning-record-view-form record-id={recordId} object-api-name="Account">
-			<template if:true={cars}>
-				<lightning-layout multiple-rows="true" pull-to-boundary="small">
-					<template for:each={cars} for:item="car">
-						<lightning-layout-item key={car.Id} size="3" class="slds-var-p-around_x-small">
-							<lightning-card title={car.Name__c} class="car-tile">
-								<div class="slds-var-p-horizontal_small car-tile-body">
-									<div class="slds-media">
-										<div class="slds-media__body">
-											<p class="slds-var-m-bottom_xx-small">{car.date_of_inspection__c}</p>
-											<p class="slds-var-m-bottom_xx-small">{car.Fuel__c}</p>
-											<p class="slds-var-m-bottom_xx-small">{car.Status__c}</p>
-											<p class="slds-var-m-bottom_xx-small">{car.Value__c}$</p>
-										</div>
-									</div>
-								</div>
-							</lightning-card>
-						</lightning-layout-item>
+			<lightning-record-view-form record-id = {recordId} object-api-name = "Account">
+					<div style = "height: 500px;">
+					<template if:true = {data}>
+						 <lightning-datatable
+								 key-field = "id"
+								 data = {data}
+								 columns = {COLUMNS}>
+						 </lightning-datatable>
 					</template>
-				</lightning-layout>
-			</template>
-			<template if:true={error}>
-				<div class="slds-text-color_error">
-					An error occurred while loading the cars list
-				</div>
-			</template>
+					</div>
 			</lightning-record-view-form>
 		</div>
 	</lightning-card>
